2003-10-09  Mike Kestner  <mkestner@ximian.com>

	* generator/Statistics.cs (Report): pretty it up.
	* generator/SymbolTable.cs : handle const-xmlChar as ConstString

2003-10-09  Mike Kestner  <mkestner@ximian.com>

	* pango/Makefile.in : fix path to glib-sharp.dll

2003-10-10  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* Makefile.in: Updated to reflect moval of api xml files from api/ 
	  to each assembly dir.
	* configure.in: Ditto
	* art/.cvsignore Ditto
	* art/Makefile.in: Ditto
	* atk/.cvsignore Ditto
	* atk/Makefile.in: Ditto
	* gda/.cvsignore Ditto
	* gda/Makefile.in: Ditto
	* gdk/.cvsignore Ditto
	* gdk/Makefile.in: Ditto
	* gdk/gdk-symbols.xml Ditto
	* glade/.cvsignore Ditto
	* glade/Makefile.in: Ditto
	* gnome/.cvsignore Ditto
	* gnome/Makefile.in: Ditto
	* gnomedb/.cvsignore Ditto
	* gnomedb/Makefile.in: Ditto
	* gst/.cvsignore Ditto
	* gst/Makefile.in: Ditto
	* gtk/.cvsignore Ditto
	* gtk/Makefile.in: Ditto
	* gtk/gtk-symbols.xml Ditto
	* gtkhtml/.cvsignore Ditto
	* gtkhtml/Makefile.in: Ditto
	* pango/.cvsignore Ditto
	* pango/Makefile.in: Ditto
	* rsvg/.cvsignore Ditto
	* rsvg/Makefile.in: Ditto
	* sources/gtk-sharp-sources.xml: Ditto
	* api/: Removed

2003-10-09  Mike Kestner  <mkestner@ximian.com>

	* api/*-api.xml : regenerated
	* parser/gapi_pp.pl : ignore simple comments.  [Fixes #47450]
	* parser/gapi2xml.pl : turn off debug.

2003-10-09  Mike Kestner  <mkestner@ximian.com>

        * generator/Property.cs : don't do new for Objects if FromNativeReturn
        returns null.  [Fixes #48055]

2003-10-08  Mike Kestner  <mkestner@ximian.com>

	* */Makefile.in : rework the prefix handling for duncan's packaging.

2003-10-08  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* gnome/PrintJob.custom: Added default ctor.
	* gnome/PrintDialog.custom: Added overloaded ctor with fewer parameters.
	* sources/Gnome.metadata: Disabled default ctor for PrintJob,
	  changed type from int to PrintDialogFlags for PrintDialog ctor and