@@ -1844,8 +1844,8 @@
           <callback cname="child_func">
             <return-type type="gboolean"/>
             <parameters>
-              <parameter type=" &#9;&#9;&#9;&#9;&#9;&#9; gboolean " name="child_func"/>
-              <parameter type=" &#9;&#9;&#9;&#9;&#9;&#9; gboolean " name="child_func"/>
+              <parameter type="" name=""/>
+              <parameter type="" name=""/>
             </parameters>
           </callback>
           <parameter type="gpointer" name="user_data"/>
@@ -2199,7 +2199,7 @@
         </parameters>
       </method>
     </boxed>
-    <boxed name="Cursor" cname="GdkCursor">
+    <boxed name="Cursor" cname="GdkCursor" opaque="1">
       <field cname="type" type="GdkCursorType"/>
       <field cname="ref_count" type="guint"/>
       <method name="GetDisplay" cname="gdk_cursor_get_display">
@@ -3295,8 +3295,8 @@
           <parameter type="GdkWindow*" name="window"/>
           <parameter type="gboolean" name="owner_events"/>
           <parameter type="GdkEventMask" name="event_mask"/>
-          <parameter type="GdkWindow*" name="confine_to"/>
-          <parameter type="GdkCursor*" name="cursor"/>
+          <parameter type="GdkWindow*" name="confine_to" null_ok="1"/>
+          <parameter type="GdkCursor*" name="cursor" null_ok="1"/>
           <parameter type="guint32" name="time_"/>
         </parameters>
       </method>
