@@ -67,6 +67,33 @@
     </attribute>
   </data>
 </rule>
+<rule>
+  <class name="GdkPointer_">
+    <method>Grab</method>
+  </class>
+  <data>
+    <attribute target="param">
+      <filter level="name">cursor</filter>
+      <name>null_ok</name>
+      <value>1</value>
+    </attribute>
+    <attribute target="param">
+      <filter level="name">confine_to</filter>
+      <name>null_ok</name>
+      <value>1</value>
+    </attribute>
+  </data>
+</rule>
+
+<rule>
+  <class name="GdkCursor"/>
+  <data>
+    <attribute target="class">
+      <name>opaque</name>
+      <value>1</value>
+    </attribute>
+  </data>
+</rule>
 
 <!-- API hacks -->
 <rule>
