@@ -1,3 +1,9 @@
+2003-10-10  Mike Kestner  <mkestner@ximian.com>
+
+	* gdk/gdk-api.xml : regenerated
+	* sources/Gdk.metadata : mark Cursor opaque. mark confine_to and
+	cursor null_ok in Gdk.Pointer.Grab. [Fixes #48273]
+
 2003-10-09  Mike Kestner  <mkestner@ximian.com>
 
 	* generator/Statistics.cs (Report): pretty it up.
